--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -17,8 +17,8 @@
 
     <TextView
         android:id="@+id/MyRecipesRecipeCraft"
-        android:layout_width="123dp"
-        android:layout_height="46dp"
+        android:layout_width="133dp"
+        android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -26,7 +26,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="RecipeCraft"
-        android:textSize="28sp"
+        android:textSize="30sp"
         app:fontFamily="cursive"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
         tools:layout_editor_absoluteY="175dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnFavRecipes"
         android:layout_width="318dp"
         android:layout_height="206dp"
         android:text="Add Image"
