--- a/app/src/main/res/layout/activity_all_recipes_pg.xml
+++ b/app/src/main/res/layout/activity_all_recipes_pg.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="59dp"
         android:layout_marginRight="59dp"
         android:layout_marginBottom="411dp"
-        android:text="You can only create 7 recipes, favorite 14 people and 5 recipes. Upgrade to RecipeCraft Premium for just $15 a month! You will get unlimited recipes, unlimited search responses, and a free whisk. "
+        android:text="You can only create 7 recipes, and favorite 14 people and 5 recipes. Upgrade to RecipeCraft Premium for just $15 a month! You will get unlimited recipes, unlimited search responses, and a free whisk. "
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
