--- a/app/src/main/res/layout/activity_my_favorites.xml
+++ b/app/src/main/res/layout/activity_my_favorites.xml
@@ -27,21 +27,25 @@
 
     <TextView
         android:id="@+id/txtMyRecipes"
-        android:layout_width="140dp"
-        android:layout_height="34dp"
-        android:text="Favorite People:"
+        android:layout_width="103dp"
+        android:layout_height="35dp"
+        android:text="My Recipes:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="128dp"
-        tools:layout_editor_absoluteY="460dp" />
+        tools:layout_editor_absoluteX="166dp"
+        tools:layout_editor_absoluteY="77dp" />
 
     <Button
         android:id="@+id/btnRecipe3"
         android:layout_width="262dp"
         android:layout_height="49dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
         android:layout_marginEnd="51dp"
         android:layout_marginRight="51dp"
         android:text="Recipe #3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageImage3"
         tools:layout_editor_absoluteY="257dp" />
 
     <Button
@@ -60,14 +64,21 @@
         tools:layout_editor_absoluteX="98dp"
         tools:layout_editor_absoluteY="380dp" />
 
-    <TextView
-        android:id="@+id/txtMyRecipes2"
-        android:layout_width="140dp"
-        android:layout_height="34dp"
-        android:text="Favorite Recipes:"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="72dp" />
+    <Button
+        android:id="@+id/btnRecipe4"
+        android:layout_width="262dp"
+        android:layout_height="49dp"
+        android:text="Recipe #7"
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="506dp" />
+
+    <Button
+        android:id="@+id/btnRecipe6"
+        android:layout_width="262dp"
+        android:layout_height="49dp"
+        android:text="Recipe #6"
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="442dp" />
 
     <Button
         android:id="@+id/btnRecipe2"
@@ -120,6 +131,22 @@
         tools:layout_editor_absoluteY="190dp" />
 
     <ImageView
+        android:id="@+id/imageImage3"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="442dp" />
+
+    <ImageView
+        android:id="@+id/imageImage5"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="506dp" />
+
+    <ImageView
         android:id="@+id/imageImage4"
         android:layout_width="49dp"
         android:layout_height="49dp"
@@ -143,18 +170,28 @@
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="257dp" />
 
+    <Button
+        android:id="@+id/btnSeeAllRecipes"
+        android:layout_width="339dp"
+        android:layout_height="49dp"
+        android:text="Create new recipe"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="593dp" />
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="50dp"
         android:layout_height="49dp"
         android:layout_marginStart="18dp"
         android:layout_marginLeft="18dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="29dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView16"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSeeAllRecipes"
         app:srcCompat="@android:drawable/ic_search_category_default" />
 
     <ImageView
@@ -163,6 +200,7 @@
         android:layout_height="54dp"
         android:layout_marginStart="18dp"
         android:layout_marginLeft="18dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="33dp"
@@ -170,6 +208,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView13"
         app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintTop_toBottomOf="@+id/btnSeeAllRecipes"
         tools:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
     <ImageView
@@ -178,12 +217,14 @@
         android:layout_height="51dp"
         android:layout_marginStart="18dp"
         android:layout_marginLeft="18dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="31dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView18"
         app:layout_constraintStart_toEndOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/btnSeeAllRecipes"
         app:srcCompat="@android:drawable/btn_star_big_off" />
 
     <ImageView
@@ -192,12 +233,14 @@
         android:layout_height="48dp"
         android:layout_marginStart="18dp"
         android:layout_marginLeft="18dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView12"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/btnSeeAllRecipes"
         app:srcCompat="@android:drawable/ic_input_get" />
 
     <ImageView
@@ -206,12 +249,14 @@
         android:layout_height="48dp"
         android:layout_marginStart="18dp"
         android:layout_marginLeft="18dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="33dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView13"
+        app:layout_constraintTop_toBottomOf="@+id/btnSeeAllRecipes"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
