--- a/app/src/main/res/layout/activity_my_recipe.xml
+++ b/app/src/main/res/layout/activity_my_recipe.xml
@@ -31,7 +31,7 @@
         android:layout_height="34dp"
         android:text="Favorite People:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="128dp"
+        tools:layout_editor_absoluteX="135dp"
         tools:layout_editor_absoluteY="460dp" />
 
     <Button
@@ -66,7 +66,7 @@
         android:layout_height="34dp"
         android:text="Favorite Recipes:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteX="146dp"
         tools:layout_editor_absoluteY="72dp" />
 
     <Button
@@ -126,6 +126,102 @@
         app:srcCompat="@drawable/ic_launcher_background"
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="380dp" />
+
+    <ImageView
+        android:id="@+id/imageImage6"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="570dp" />
+
+    <ImageView
+        android:id="@+id/imageImage7"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <ImageView
+        android:id="@+id/imageImage11"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="570dp" />
+
+    <ImageView
+        android:id="@+id/imageImage12"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="219dp"
+        tools:layout_editor_absoluteY="570dp" />
+
+    <ImageView
+        android:id="@+id/imageImage13"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="219dp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <ImageView
+        android:id="@+id/imageImage15"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="277dp"
+        tools:layout_editor_absoluteY="570dp" />
+
+    <ImageView
+        android:id="@+id/imageImage14"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="336dp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <ImageView
+        android:id="@+id/imageImage17"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="336dp"
+        tools:layout_editor_absoluteY="570dp" />
+
+    <ImageView
+        android:id="@+id/imageImage16"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="277dp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <ImageView
+        android:id="@+id/imageImage10"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <ImageView
+        android:id="@+id/imageImage9"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="570dp" />
+
+    <ImageView
+        android:id="@+id/imageImage8"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="511dp" />
 
     <ImageView
         android:id="@+id/imageImage2"
